# koopmann

./: .gitignore  Makefile  README.md  adversarial_test.py  pyproject.toml
_archive/: 00_original_model.ipynb  01_probe_model.ipynb  03_singular_values.ipynb  04_pca.ipynb  adv_attacks.py
_archive/plotting/: plot_paths.py  plot_pca.py
analysis/: 00_original_model.ipynb  01.ipynb  01_embedding.ipynb  01_probe_model.ipynb  01_recons_analysis.ipynb  02_clusters.ipynb  02_isometry.ipynb  02_pca.ipynb  02_recons_analysis.ipynb  02_recons_b.ipynb  03__editing.ipynb  03_accs.ipynb  03_eigenvalues.ipynb  03_pca.ipynb  03_recons_analysis copy.ipynb  03_singular_values.ipynb  04_boundary.ipynb  04_linear.ipynb  04_operator.ipynb  04_pca.ipynb  04_recons_analysis.ipynb  04_topology.ipynb  05_pca.ipynb  99_trajectory.ipynb  adv_attacks.py  common.py  external.py  plot_eigen.ipynb  plot_paths.py  plot_pca.py  plot_protoype.ipynb  residual_alignment_methods.py  utils.py
analysis_subspace_nb/: 02_first_five_analysis.ipynb  03_mnist_top_eigenvalue_analysis.ipynb  adversarial_test.py
analytic_embedding/: encoder_build.ipynb
embedding_experiments/: 00_original_model.ipynb  01_embedding.ipynb  02_recons_analysis copy.ipynb  04_pca.ipynb  processor.py
koopmann/: aesthetics.py  data.py  log.py  shape_metrics.py  utils.py  visualization.py
koopmann/mixins/: __init__.py  hookable.py  serializable.py
koopmann/models/: Untitled-1.ipynb  __init__.py  _conv_autoencoder.py  _kae_example.ipynb  _lora_example.ipynb  _new_conv_autoencoder.py  _resnet_example.ipynb  analytic_encoder.py  autoencoder.py  base.py  conv_resnet.py  layers.py  mlp.py  mlp_resnet.py  res_mlp.py  residual_block.py  residual_blocks.py  resmlp.py  resnet.py  utils.py
koopmann/scripts/: common.py
koopmann/scripts/train_ae/: config_scale_cifar.yaml  config_scale_lotusroot.yaml  config_scale_mnist.yaml  config_scale_sweep.yaml  config_scale_sweep_mnist.yaml  config_scale_torus.yaml  config_scale_yinyang.yaml  input_scale.py  scale.py  sweep.py
koopmann/scripts/train_mlp/: config_train_binary_mnist.yaml  config_train_mnist.yaml  config_train_torus.yaml  config_train_yinyang.yaml  train.py
models/: resmlp5_yinyang.safetensors
models/yinyang/: dim_20_k_100_loc_1_exponential_autoencoder_yinyang_model_seed_21.safetensors  dim_20_k_100_loc_1_exponential_autoencoder_yinyang_model_seed_21_preprocessing.safetensors  dim_20_k_100_loc_1_exponential_autoencoder_yinyang_model_seed_365.safetensors  dim_20_k_100_loc_1_exponential_autoencoder_yinyang_model_seed_365_preprocessing.safetensors  dim_20_k_100_loc_1_exponential_autoencoder_yinyang_model_seed_44.safetensors  dim_20_k_100_loc_1_exponential_autoencoder_yinyang_model_seed_44_preprocessing.safetensors  dim_20_k_100_loc_1_exponential_autoencoder_yinyang_model_seed_500.safetensors  dim_20_k_100_loc_1_exponential_autoencoder_yinyang_model_seed_500_preprocessing.safetensors  dim_20_k_100_loc_1_exponential_autoencoder_yinyang_model_seed_53.safetensors  dim_20_k_100_loc_1_exponential_autoencoder_yinyang_model_seed_53_preprocessing.safetensors  dim_20_k_100_loc_1_exponential_autoencoder_yinyang_model_seed_74.safetensors  dim_20_k_100_loc_1_exponential_autoencoder_yinyang_model_seed_74_preprocessing.safetensors  dim_20_k_100_loc_1_exponential_autoencoder_yinyang_model_seed_90.safetensors  dim_20_k_100_loc_1_exponential_autoencoder_yinyang_model_seed_90_preprocessing.safetensors  dim_20_k_100_loc_1_exponential_autoencoder_yinyang_model_seed_99.safetensors  dim_20_k_100_loc_1_exponential_autoencoder_yinyang_model_seed_99_preprocessing.safetensors
scripts/: adv_attacks.py  common.py  common_config_def.py  utils.py
scripts/train_ae/: _scale.py  _scale_q.py  config_def.py  eval.py  losses.py  scale.py  shape_metrics.py  sweep.py
scripts/train_ae/config_files/: _new_scale_resnet.py  _scale_resnet.py  config_scale_binary_mnist.yaml  config_scale_cifar10.yaml  config_scale_fashion.yaml  config_scale_lotusroot.yaml  config_scale_mnist.yaml  config_scale_sweep_cifar10.yaml  config_scale_sweep_lotusroot.yaml  config_scale_sweep_mnist.yaml  config_scale_torus.yaml  config_scale_yinyang.yaml  input_scale.py
scripts/train_mlp/: config_def.py  delete.py  train.py
scripts/train_mlp/config_files/: config_train_lotusroot.yaml  config_train_mnist.yaml
scripts/train_model/: config_def.py  sweep.py  train.py
scripts/train_model/config_files/: config_sweep_mnist.yaml  config_train_cifar10_resnet.yaml  config_train_fashion.yaml  config_train_lotusroot.yaml  config_train_mnist.yaml  config_train_mnist_mlp.yaml  config_train_mnist_resnet.yaml  config_train_sweep.yaml  config_train_torus.yaml  config_train_yinyang.yaml
scripts/train_probe/: config_def.py  probe.py
scripts/train_probe/config_files/: config_probe_fashion.yaml  config_probe_mnist.yaml
tests/: test_autoencoder.py  test_conv.py  test_conv_block.py  test_datasets.py  test_layer.py  test_linear.py  test_linear_block.py  test_mlp.py  test_preprocessing.py  test_resmlp.py  test_resnet.py
