[tool.poetry]
name = "koopmann"
version = "0.1.0"
description = ""
authors = ["Nishant Aswani <nsa325@nyu.edu>"]
readme = "README.md"
package-mode = true

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
torch = [
    # { version = "2.1.0", markers = "sys_platform == 'darwin'" },
    { version = ">=2.1.0", source = "pytorch_cuda", markers = "sys_platform == 'linux'" }
]
torchvision = [
    # { version = "*", platform="darwin"},
    { version = "*", source = "pytorch_cuda", markers = "sys_platform == 'linux'" }
]
fire = "^0.7.0"
safetensors = "^0.4.5"
rich = "^13.9.3"
torchinfo = "^1.8.0"
pydantic = "*"
torcheval = "^0.0.7"
pyyaml = "^6.0.2"
tqdm = "^4.66.5"
matrepr = "^1.0.1"
einops = "^0.8.0"
ruff = "^0.7.1"
ipywidgets = "^8.1.5"
numpy = "*"
scipy = "*"
scikit-learn = "^1.3.0"
nbformat = "^5.10.4"
typer = "^0.15.1"
pyfonts = "^0.0.2"
pillow = "^11.0.0"
imageio = {extras = ["ffmpeg"], version = "^2.36.1"}
matplotlib = "^3.10.0"
neural-collapse = {git = "https://github.com/rhubarbwu/neural-collapse.git"}
wandb = "^0.19.6"
click = "^8.1.8"
torchviz = "^0.0.3"
ipykernel = "*"
deprecated = "^1.2.18"
plotly = "5.24.1"
scikit-tda = "^1.1.1"
giotto-ph = "^0.2.4"
requests = ">=2.27"

[[tool.poetry.source]]
name = "pytorch_cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[[tool.poetry.source]]
name = "pytorch_cuda"
url = "https://download.pytorch.org/whl/cu121" 
priority = "explicit"

[tool.poetry.group.test.dependencies]  
pytest-randomly = "^3.15.0"  
pytest = "^8.3.3"  
  
[tool.poetry.group.dev.dependencies]  
ruff = "*"  
ipykernel = "^6.29.5"
matplotlib="*"
seaborn="*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.ruff]
# Enable Jupyter Notebook support
line-length = 100 
target-version = "py311"

[tool.ruff.lint]
ignore = ["F722"]
# unfixable = ["F401"] # Unused mports